--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-native-vector-icons": "^6.4.13",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-bouncy-checkbox": "^3.0.7",
