--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-native-vector-icons": "^6.4.13",
+    "@types/socket.io": "^3.0.2",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
@@ -35,6 +36,7 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.6.1",
     "yup": "^1.0.2"
   },
   "devDependencies": {
