--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-native-vector-icons": "^6.4.13",
-    "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
