--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
     "react-devtools": "^4.27.4",
+    "react-native-flipper-performance-plugin": "^0.4.0",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
